--- a/html-css-1/homework2/index.html
+++ b/html-css-1/homework2/index.html
@@ -5,56 +5,49 @@
     <title>Title</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="body">
-
-
-<h1 class="ramda">ra<span class="mda">mda.js</span></h1>
-<div class="Menu">
+<body>
+<section class="container">
+    <div class="header"><a href="#">Ra<span class="blue-text">
+        mda.js</span></a>
+    </div>
+<div class="menu">
     <ul class="menu-ul">
-        <li class="first-menu-li"><a href="" class="menu-links ">Functional Programming</a></li>
-        <li class="first-menu-li"><a href="" class="menu-links ">Ramda</a></li>
-        <li class="first-menu-li"><a href="" class="menu-links ">Fantasy Land Spec</a></li>
-        <li class="first-menu-li"><a href="" class="menu-links ">Node.js for all</a></li>
+        <a href="#"> <li class="menu-ul-li-item">Functional Programming</li></a>
+        <a href="#"> <li class="menu-ul-li-item">Ramda</li></a>
+        <a href="#"> <li class="menu-ul-li-item">Fantasy Land Spec</li></a>
+        <a href="#"> <li class="menu-ul-li-item">Node.js for all</li></a>
+    </ul>
     </ul>
 </div>
+    <div class="nav-bar-and-img">
+        <div class="nav-bar">
+            <ul class="nav-bar-ul">
+                <a href="#"> <li class="nav-bar-ul-li-item">Ramda</li></a>
+                <a href="#"> <li class="nav-bar-ul-li-item" >Why Ramda?</li></a>
+                <a href="#"> <li class="nav-bar-ul-li-item">What's Different?</li></a>
+                <a href="#"> <li class="nav-bar-ul-li-item">Introductions</li></a>
+                <a href="#"> <li class="nav-bar-ul-li-item">Philosophy</li></a>
+            </ul>
+        </div>
+        <div class="img">
+            <img src="img\top-img.png" alt="" class="img-item">
+        </div>
+          <div class="text">  <p>Lorem ipsum — классическая панграмма, условный, зачастую бессмысленный текст-заполнитель, вставляемый в макет страницы. Используется в качестве заполнителя по крайней мере с XVI века. Является искажённым отрывком из философского трактата Марка Туллия Цицерона «О пределах добра и зла», написанного в 45 году до н. э. на латинском языке, обнаружение сходства атрибутируется Ричарду МакКлинтоку.
+            </p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></div>
+    </div>
+    <footer class="footer-menu">
+        <ul class="footer-menu-ul">
+            <a href="#"> <li class="footer-menu-ul-li-item">Ramda</li></a>
+            <a href="#"> <li class="footer-menu-ul-li-item">Why Ramda?</li></a>
+            <a href="#"> <li class="footer-menu-ul-li-item">What is Different?</li></a>
+            <a href="#"> <li class="footer-menu-ul-li-item">Introductions</li></a>
+            <a href="#"> <li class="footer-menu-ul-li-item">Philosophy</li></a>
 
-<div class="information-1" >
-    <ul>
-        <li  class="menu-2-list"><a href="#" class="menu-2-link">Ramda</a></li>
-        <li class="menu-2-list"><a href="#" class="Why-ramda? menu-2-link">Why Ramda?</a></li>
-        <li class="menu-2-list"><a href="#" class="menu-2-link">What's different?</a></li>
-        <li class="menu-2-list"><a href="#" class="menu-2-link">Introductions</a></li>
-        <li class="menu-2-list"><a href="#" class="menu-2-link">Philosophy</a></li>
-    </ul>
-</div>
-
-<div class="information-2">
-    <img src="img/top-img.png" alt="" class="img-1">
-
-
-</div>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-    Numquam officia quos soluta
-    suscipit ut. Doloribus fuga possimus praesentium vero
-    voluptatibus Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aspernatur aut doloribus, eius, laudantium minus neque nobis omnis quae rem soluta
-    tempora totam, veniam. Aliquid labore porro quis sed voluptates!</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A
-    d aliquid, aut eum fugiat ipsam minus odit quasi
-    quis sequi velit Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eius laborum molestiae odit omnis quod, tempora tenetur velit vitae.
-    Eligendi iste modi possimus quasi sed! Atque eius error quam sequi.</p>
-
-<div class="Menu">
-    <ul class="menu-ul">
-        <li class="first-menu-li"><a href="" class="menu-links3 ">Ramda</a></li>
-        <li class="first-menu-li"><a href="" class="menu-links3  links3-why">Why Ramda?</a></li>
-        <li class="first-menu-li"><a href="" class="menu-links ">What is different?</a></li>
-
-        <li class="first-menu-li"><a href="" class="menu-links3 ">Introductions</a></li>
-        <li class="first-menu-li"><a href="" class="menu-links3 ">Philosophy</a></li>
-        <li class="first-menu-li"><a href="" class="menu-links3  "> Copyright © 2018</a></li>
-
-    </ul>
-</div>
+             <li class="copyright">Copyright © 2018</li>
+        </ul>
+        </ul>
+    </footer>
+</section>
 </body>
 </html>
