I added some changes to hw11

--- a/stepProjectFirst/index.html
+++ b/stepProjectFirst/index.html
@@ -2,9 +2,170 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <title>Step Project</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link
+            rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+            integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+            crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
+</head <section class="header">
+    <div class="header-top">
+        <div class="container">
+            <div class="logo-wrapper">
+                <div class="logo-hexagon-text">H</div>
+                <div class="logo-text">the<span class="green-text">ham</span></div>
+            </div>
+            <nav class="header-top-nav">
+                <a href="#" class="header-top-nav-item">home</a>
+                <a href="#" class="header-top-nav-item">about</a>
+                <a href="#" class="header-top-nav-item">skills</a>
+                <a href="#" class="header-top-nav-item">service</a>
+                <a href="#" class="header-top-nav-item">work</a>
+                <a href="#" class="header-top-nav-item">testimonial</a>
+                <a href="#" class="header-top-nav-item">blog</a>
+                <a href="#" class="header-top-nav-item">team</a>
+                <a href="#" class="header-top-nav-item">contact</a>
+                <i class="fas fa-search"></i>
+            </nav>
+        </div>
+
+    </div>
+
+    <div class="header-slogan">
+        <h3 class="header-slogan-first">The Ham is <span class="green-text">Wordpress theme</span></h3>
+        <h1 class="header-slogan-second">we are creative</h1>
+        <p class="header-slogan-third">Just Buy And Enjoy These Awesome Features</p>
+    </div>
+    <div class="header-buttons container">
+        <div class="header-button-first"><h6>EXPLORE NOW</h6></div>
+        <div class="header-button-second"><h6>purchase now</h6></div>
+    </div>
+</section>
+<section class="squares-icons">
+    <div class="square-icon-1">
+        <h5><span class="green-text">Different theme option</span></h5>
+    </div>
+    <div class="square-icon-2">
+        <h5>fully customizable</h5>
+    </div>
+    <div class="square-icon-3">
+        <h5><span class="green-text">unlimited support</span></h5>
+    </div>
+    <div class="square-icon-4">
+        <h5>responsive all device</h5>
+    </div>
+</section>
+
+
+<section class=" container">
+    <div class="section-title">
+        <p class="section-title-text">Our Services</p>
+        <div class="green-line "></div>
+        <div class="green-line green-line-second"></div>
+    </div>
+    <div class="option-tabs">
+        <div class="option-tabs-item">
+            <p class="tab-text">Web Design</p>
+            <div class="triangle-active"></div>
+        </div>
+        <div class="option-tabs-item ">
+            <p class="tab-text">Graphic Design</p>
+            <div class="triangle-inactive"></div>
+
+        </div>
+        <div class="option-tabs-item ">
+            <p class="tab-text">Online Support</p>
+            <div class="triangle-inactive"></div>
+
+        </div>
+        <div class="option-tabs-item ">
+            <p class="tab-text">App Design</p>
+            <div class="triangle-inactive"></div>
+
+        </div>
+        <div class="option-tabs-item ">
+            <p class="tab-text">Online Marketing</p>
+            <div class="triangle-inactive"></div>
+
+        </div>
+        <div class="option-tabs-item ">
+            <p class="tab-text">Seo Service</p>
+            <div class="triangle-inactive"></div>
+
+        </div>
+    </div>
+</section>
+<section class="gallery-option">
+
+</section>
+
+
+
+
+
+
+
+
+
+
+<div  style="background: yellow" >
+    <div class="slick-bigger container">
+        <div>
+            <div class="slick-bigger-items">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam et expedita fuga iure labore recusandae temporibus velit voluptas. Commodi eveniet fugit ipsum optio, perspiciatis quae repudiandae tempora unde veritatis? Cumque?</p>
+                <img src="img/Layer%204@1X.png" alt="slide-1 "class="slick-bigger-item-img" >
+            </div>
+        </div>
+
+        <div>
+            <div class="slick-bigger-items">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam et expedita fuga iure labore recusandae temporibus velit voluptas. Commodi eveniet fugit ipsum optio, perspiciatis quae repudiandae tempora unde veritatis? Cumque?</p>
+                <img src="img/Layer%207@1X.png" alt="slide-1 " class="slick-bigger-item-img">
+
+            </div>
+        </div>
+
+        <div>
+            <div class="slick-bigger-items">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam et expedita fuga iure labore recusandae temporibus velit voluptas. Commodi eveniet fugit ipsum optio, perspiciatis quae repudiandae tempora unde veritatis? Cumque?</p>
+                <img src="img/Layer%208@1X.png" alt="slide-1 " class="slick-bigger-item-img">
+
+            </div>
+        </div>
+        <div>
+            <div class="slick-bigger-items">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam et expedita fuga iure labore recusandae temporibus velit voluptas. Commodi eveniet fugit ipsum optio, perspiciatis quae repudiandae tempora unde veritatis? Cumque?</p>
+                <img src="https://via.placeholder.com/600x350/228" alt="slide-1 " class="slick-bigger-item-img">
+
+            </div>
+        </div>
+        <div>
+            <div class="slick-bigger-items">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam et expedita fuga iure labore recusandae temporibus velit voluptas. Commodi eveniet fugit ipsum optio, perspiciatis quae repudiandae tempora unde veritatis? Cumque?</p>
+                <img src="https://via.placeholder.com/600x350/228" alt="slide-1 " class="slick-bigger-item-img">
+
+            </div>
+        </div>
+
+
+    </div>
+
+    <div class="slick-smaller container ">
+        <img src="img/Layer%204@1X.png" alt="slide-4" class="slick-smaller-item">
+        <img src="img/Layer%207@1X.png"  alt="slide-5" class="slick-smaller-item">
+        <img src="img/Layer%208@1X.png" alt="slide-6" class="slick-smaller-item">
+        <img src="https://via.placeholder.com/156x75/f32" alt="slide-7" class="slick-smaller-item">
+        <img src="https://via.placeholder.com/157x75/f32" alt="slide-8" class="slick-smaller-item">
+    </div>
+
+</div>
+<!--<script src="js/jquery.js"></script>-->
+<!--<script src="js/slick.js"></script>-->
+<script src="js/script.js"></script>
 
 </body>
 </html>
