--- a/stepProjectFirst/index.html
+++ b/stepProjectFirst/index.html
@@ -12,7 +12,8 @@
     />
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/slick-theme.css">
-</head <section class="header">
+</head>
+<section class="header big-content">
     <div class="header-top">
         <div class="container">
             <div class="logo-wrapper">
@@ -45,7 +46,7 @@
         <div class="header-button-second"><h6>purchase now</h6></div>
     </div>
 </section>
-<section class="squares-icons">
+<section class="squares-icons big-content">
     <div class="square-icon-1">
         <h5><span class="green-text">Different theme option</span></h5>
     </div>
@@ -61,7 +62,7 @@
 </section>
 
 
-<section class=" container">
+<section class="container">
     <div class="section-title">
         <p class="section-title-text">Our Services</p>
         <div class="green-line "></div>
@@ -98,7 +99,61 @@
 
         </div>
     </div>
+    <div class="options-tabs-information ">
+       <div class="options-tabs-information-item">
+           <img src="img/section-2.jpg" alt="" class="information-img">
+            <p class="information-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet, aperiam dolore est expedita iusto
+            maiores nam nobis Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid laboriosam nihil numquam quisquam velit? Commodi doloribus neque odit sit? Aspernatur debitis magnam, modi omnis praes]re ullam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci architecto atque doloribus ea eaque expedita fugiat illum labore pariatur perferendis qui quis, ratione repellendus repudiandae
+                voluptate. Labore omnis quod sint! quae quam rem repellat unde voluptatem. Architecto commodi dicta ipsam quasi veniam.</p>
+       </div>
+    </div>
 </section>
+
+<section class="section-install-now">
+    <div class="install-now container">
+    <h1 class="green-text install-now-text">Everything is ready. just buy and install now</h1>
+    <p class="header-slogan-third">Smooth reliable, responsive ready, perfect portfolio, unique blog layout and many many options for you</p>
+    <button class="header-button-second install-now-button">purchase now</button>
+    </div>
+</section>
+<section class="container">
+    <div class="section-title">
+        <p class="section-title-text">Our Services</p>
+        <div class="green-line "></div>
+        <div class="green-line green-line-second"></div>
+    </div>
+    <div class="option-tabs">
+        <div class="option-tabs-item">
+            <p class="tab-text">Web Design</p>
+            <div class="triangle-active"></div>
+        </div>
+        <div class="option-tabs-item ">
+            <p class="tab-text">Graphic Design</p>
+            <div class="triangle-inactive"></div>
+
+        </div>
+        <div class="option-tabs-item ">
+            <p class="tab-text">Online Support</p>
+            <div class="triangle-inactive"></div>
+
+        </div>
+        <div class="option-tabs-item ">
+            <p class="tab-text">App Design</p>
+            <div class="triangle-inactive"></div>
+
+        </div>
+        <div class="option-tabs-item ">
+            <p class="tab-text">Online Marketing</p>
+
+        </div>
+        <div class="option-tabs-item ">
+            <p class="tab-text">Seo Service</p>
+
+        </div>
+    </div>
+    </div>
+</section>
+
 <section class="gallery-option">
 
 </section>
