--- a/stepProjectFirst/index.html
+++ b/stepProjectFirst/index.html
@@ -42,22 +42,41 @@
         <p class="header-slogan-third">Just Buy And Enjoy These Awesome Features</p>
     </div>
     <div class="header-buttons container">
-        <div class="header-button-first"><h6>EXPLORE NOW</h6></div>
-        <div class="header-button-second"><h6>purchase now</h6></div>
+        <a href="#"><div class="header-button-first"><h6>EXPLORE NOW</h6></div></a>
+        <a href="#"> <div class="header-button-second"><h6>purchase now</h6></div></a>
     </div>
 </section>
 <section class="squares-icons big-content">
-    <div class="square-icon-1">
-        <h5><span class="green-text">Different theme option</span></h5>
+
+        <div class="square-1">
+            <a href="#">
+            <img src="img/Forma%201@1X%20(1).png" alt="">
+                <h5 class="square-text">
+                    <span class="green-text">Different theme option</span>
+                </h5>
+            </a>
+        </div>
+
+    <div class="square-2">
+        <a href="#">
+            <img src="img/Forma%201@1X%20(2).png" alt="">
+            <h5 class="square-text-2">fully customizable</h5>
+        </a>
     </div>
-    <div class="square-icon-2">
-        <h5>fully customizable</h5>
+    <div class="square-3">
+        <a href="#">
+            <img src="img/Forma%201@1X%20(3).png" alt="">
+            <h5 class="square-text">
+                <span class="green-text">unlimited support</span>
+            </h5>
+        </a>
     </div>
-    <div class="square-icon-3">
-        <h5><span class="green-text">unlimited support</span></h5>
-    </div>
-    <div class="square-icon-4">
-        <h5>responsive all device</h5>
+
+    <div class="square-4">
+        <a href="#">
+            <img src="img/Forma%201@1X%20(4).png" alt="">
+            <h5 class="square-text-2">responsive all device</h5>
+        </a>
     </div>
 </section>
 
@@ -69,89 +88,196 @@
         <div class="green-line green-line-second"></div>
     </div>
     <div class="option-tabs">
-        <div class="option-tabs-item">
-            <p class="tab-text">Web Design</p>
-            <div class="triangle-active"></div>
+        <div class="option-tabs-item tab-first" >
+            <p class="tab-text tab-text-first">Web Design</p>
+            <div class="triangle triangle-first"></div>
         </div>
-        <div class="option-tabs-item ">
-            <p class="tab-text">Graphic Design</p>
-            <div class="triangle-inactive"></div>
+        <div class="option-tabs-item tab-second ">
+            <p class="tab-text tab-text-second">Graphic Design</p>
+            <div class="triangle triangle-second"></div>
 
         </div>
-        <div class="option-tabs-item ">
-            <p class="tab-text">Online Support</p>
-            <div class="triangle-inactive"></div>
+        <div class="option-tabs-item tab-third ">
+            <p class="tab-text tab-text-third">Online Support</p>
+            <div class="triangle triangle-third"></div>
 
         </div>
-        <div class="option-tabs-item ">
-            <p class="tab-text">App Design</p>
-            <div class="triangle-inactive"></div>
+        <div class="option-tabs-item tab-fourth">
+            <p class="tab-text tab-text-fourth">App Design</p>
+            <div class="triangle triangle-fourth"></div>
 
         </div>
-        <div class="option-tabs-item ">
-            <p class="tab-text">Online Marketing</p>
-            <div class="triangle-inactive"></div>
+        <div class="option-tabs-item  tab-fiveth">
+            <p class="tab-text tab-text-fiveth">Online Marketing</p>
+            <div class="triangle triangle-fiveth"></div>
 
         </div>
-        <div class="option-tabs-item ">
-            <p class="tab-text">Seo Service</p>
-            <div class="triangle-inactive"></div>
+        <div class="option-tabs-item tab-sixth">
+            <p class="tab-text tab-text-sixth">Seo Service</p>
+            <div class="triangle triangle-sixth"></div>
 
         </div>
     </div>
     <div class="options-tabs-information ">
-       <div class="options-tabs-information-item">
-           <img src="img/section-2.jpg" alt="" class="information-img">
+       <div class="options-tabs-information-item information-first">
+           <img src="img/web-design6.jpg" alt="" class="information-img">
             <p class="information-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet, aperiam dolore est expedita iusto
-            maiores nam nobis Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid laboriosam nihil numquam quisquam velit? Commodi doloribus neque odit sit? Aspernatur debitis magnam, modi omnis praes]re ullam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci architecto atque doloribus ea eaque expedita fugiat illum labore pariatur perferendis qui quis, ratione repellendus repudiandae
+            maioreamet, consectetur adipisicing elit. Aliquid laboriosam nihil numquam quisquam velit? Commodi doloribus neque odit sit? Aspernatur debitis magnam, modi omnis praes]re ullam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci architecto atque doloribus ea eaque expedita fugiat illum labore pariatur perferendis qui quis, ratione repellendus repudiandae
                 voluptate. Labore omnis quod sint! quae quam rem repellat unde voluptatem. Architecto commodi dicta ipsam quasi veniam.</p>
        </div>
+        <div class="options-tabs-information-item information-second">
+            <img src="img/web-design1.jpg" alt="" class="information-img">
+            <p class="information-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae dolore dolorum modi, nemo officiis quasi quis sapiente voluptatem voluptatum! Delectus doloremque eaque eum ipsam lsequi?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet, aperiam dolore est expedita iusto
+                maiores namae quam rem Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aspernatur enim expedita laborum quisquam sequi sunt suscipit tenetur, vel voluptatibus. Ab, accusantium aut autem consectetur et explicabo nulla perferendis repellat.repellat unde voluptatem. Architecto commodi dicta ipsam quasi veniam.</p>
+        </div>
+        <div class="options-tabs-information-item information-third">
+            <img src="img/web-design2.jpg" alt="" class="information-img">
+            <p class="information-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet, aperiam dolore est expedita iusto
+                maiores nam nobis Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid laboriosam nihil numquam quisquam velit? Commodi doloribus neque odit sit? Aspernatur debitis magnam, modi omnis praes]re ullam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci architecto atque doloribus ea eaque expedita fugiat illum labore pariatur perferendis qui quis, ratione repellendus repudiandae
+                od sint! quae quam rem repellat unde voluptatem. Architecto commodi dicta ipsam quasi veniam.</p>
+        </div>
+        <div class="options-tabs-information-item information-fourth">
+            <img src="img/web-design3.jpg" alt="" class="information-img">
+            <p class="information-text"> ipsum dolor sit amet, consectetur adipisicing elit. Accusantium amet, aperiam dolore est expedita iusto
+                maiores nam nobis Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid laboriosam nihil numquam quisquam velit? Commodi doloribus neque odit sit? Aspernatur debitis magnam, modi omnis praes]re ullam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci architecto atque doloribus ea eaque expedita fugiat illum labore pariatur perferendis qui quis, ratione repellendus repudiandae
+                voluptate. Labore omnis quod sint! quae quam rem repellat unde voluptatem. Architecto commodi dicta ipsam quasi veniam.</p>
+        </div>
+        <div class="options-tabs-information-item information-fiveth">
+            <img src="img/web-design4.jpg" alt="" class="information-img">
+            <p class="information-text"> sit amet, consectetur adipisicing elit. Accusantium amet, aperiam dolore est expedita iusto
+                maiores nam nobis Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid laboriosam nihil numquam quisquam velit? Commodi doloribus neque odit sit? Aspernatur debitis magnam, modi omnis praes]re ullam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci architecto atque doloribus ea eaque expedita fugiat illum labore pariatur perferendis qui quis, ratione repellendus repudiandae
+                voluptate. Labore omnis quod sint! quae quam rem repellat unde voluptatem. Architecto commodi dicta ipsam quasi veniam.</p>
+        </div>
+        <div class="options-tabs-information-item information-sixth">
+            <img src="img/web-design5.jpg" alt="" class="information-img">
+            <p class="information-text"> amet, consectetur adipisicing elit. Accusantium amet, aperiam dolore est expedita iusto
+                maiores nam nobis Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid laboriosam nihil numquam quisquam velit? Commodi doloribus neque odit sit? Aspernatur debitis magnam, modi omnis praes]re ullam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci architecto atque doloribus ea eaque expedita fugiat illum labore pariatur perferendis qui quis, ratione repellendus repudiandae
+                voluptate. Labore omnis quod sint! quae quam rem repellat unde voluptatem. Architecto commodi dicta ipsam quasi veniam.</p>
+        </div>
     </div>
 </section>
 
 <section class="section-install-now">
-    <div class="install-now container">
-    <h1 class="green-text install-now-text">Everything is ready. just buy and install now</h1>
-    <p class="header-slogan-third">Smooth reliable, responsive ready, perfect portfolio, unique blog layout and many many options for you</p>
-    <button class="header-button-second install-now-button">purchase now</button>
+    <div style="background: rgba(0,0,0,0.7);">
+        <div class="install-now container">
+            <a href="#">
+                <h1 class="green-text install-now-text">Everything is ready. just buy and install now</h1>
+                <p class="header-slogan-third">Smooth reliable, responsive ready, perfect portfolio, unique blog layout and many many options for you</p>
+                <button class=" install-now-button">purchase now</button>
+            </a>
+        </div>
     </div>
 </section>
-<section class="container">
-    <div class="section-title">
-        <p class="section-title-text">Our Services</p>
+
+
+
+
+
+
+<section class=" our-amazing-work">
+    <div class="section-title container">
+        <p class="section-title-text">Our Amazing Work</p>
         <div class="green-line "></div>
         <div class="green-line green-line-second"></div>
     </div>
-    <div class="option-tabs">
-        <div class="option-tabs-item">
-            <p class="tab-text">Web Design</p>
-            <div class="triangle-active"></div>
+
+    <div class="our-amazing-work-tabs container">
+        <div class="our-amazing-work-tabs-item tab-all">
+            <p class="gallery-tab-text gallery-tab-text-all">All</p>
         </div>
-        <div class="option-tabs-item ">
-            <p class="tab-text">Graphic Design</p>
-            <div class="triangle-inactive"></div>
+        <div class="our-amazing-work-tabs-item tab-graphic">
+            <p  class="gallery-tab-text gallery-tab-text-graphic">Graphic Design</p>
+        </div>
+        <div class="our-amazing-work-tabs-item tab-veb">
+            <p  class="gallery-tab-text gallery-tab-text-veb">Web Design</p>
+        </div>
+        <div class="our-amazing-work-tabs-item tab-landing">
+            <p  class="gallery-tab-text gallery-tab-text-landing">Landing Pages</p>
+        </div>
+        <div class="our-amazing-work-tabs-item tab-word-press">
+            <p class="gallery-tab-text gallery-tab-text-press">Wordpress</p>
+        </div>
+    </div>
+    <div class="container our-amazing-images">
+        <div class="our-amazing-work-images-column column-first">
+            <img src="img/Layer%2034@1X.png" alt="" class="our-amazing-work-images-item item-all">
+            <img src="img/Layer%2033@1X.png" alt="" class="our-amazing-work-images-item item-all">
+            <img src="img/Layer%2032@1X.png" alt="" class="our-amazing-work-images-item item-all">
+
+            <img src="img/Layer%2034@1X.png" alt="" class="our-amazing-work-images-item item-graphic">
+            <img src="img/Layer%2033@1X.png" alt="" class="our-amazing-work-images-item item-graphic">
+
+            <img src="img/Layer%2033@1X.png" alt="" class="our-amazing-work-images-item item-veb">
+            <img src="img/Layer%2032@1X.png" alt="" class="our-amazing-work-images-item item-veb">
+
+            <img src="img/Layer%2034@1X.png" alt="" class="our-amazing-work-images-item item-landing">
+            <img src="img/Layer%2032@1X.png" alt="" class="our-amazing-work-images-item item-landing">
+
+            <img src="img/Layer%2034@1X.png" alt="" class="our-amazing-work-images-item item-press">
+            <img src="img/Layer%2033@1X.png" alt="" class="our-amazing-work-images-item item-press">
 
         </div>
-        <div class="option-tabs-item ">
-            <p class="tab-text">Online Support</p>
-            <div class="triangle-inactive"></div>
+        <div class="our-amazing-work-images-column column-second">
+             <img src="img/Layer%2024@1X.png" alt="" class="our-amazing-work-images-item  item-all">
+            <img src="img/Layer%2025@1X.png" alt="" class="our-amazing-work-images-item item-all">
+            <img src="img/Layer%2031@1X.png" alt="" class="our-amazing-work-images-item item-all">
+
+            <img src="img/Layer%2025@1X.png" alt="" class="our-amazing-work-images-item item-graphic">
+            <img src="img/Layer%2031@1X.png" alt="" class="our-amazing-work-images-item item-graphic">
+
+            <img src="img/Layer%2025@1X.png" alt="" class="our-amazing-work-images-item item-veb">
+            <img src="img/Layer%2031@1X.png" alt="" class="our-amazing-work-images-item item-veb">
+
+            <img src="img/Layer%2025@1X.png" alt="" class="our-amazing-work-images-item item-landing">
+            <img src="img/Layer%2031@1X.png" alt="" class="our-amazing-work-images-item item-landing">
+
+            <img src="img/Layer%2025@1X.png" alt="" class="our-amazing-work-images-item item-press">
+            <img src="img/Layer%2031@1X.png" alt="" class="our-amazing-work-images-item item-press">
 
         </div>
-        <div class="option-tabs-item ">
-            <p class="tab-text">App Design</p>
-            <div class="triangle-inactive"></div>
+        <div class="our-amazing-work-images-column column-third">
+             <img src="img/Layer%2030@1X.png" alt="" class="our-amazing-work-images-item item-all">
+            <img src="img/Layer%2029@1X.png" alt="" class="our-amazing-work-images-item item-all">
+            <img src="img/Layer%2027@1X.png" alt="" class="our-amazing-work-images-item item-all">
+
+            <img src="img/Layer%2029@1X.png" alt="" class="our-amazing-work-images-item item-graphic">
+            <img src="img/Layer%2027@1X.png" alt="" class="our-amazing-work-images-item item-graphic">
+
+            <img src="img/Layer%2029@1X.png" alt="" class="our-amazing-work-images-item item-veb">
+            <img src="img/Layer%2027@1X.png" alt="" class="our-amazing-work-images-item item-veb">
+
+            <img src="img/Layer%2030@1X.png" alt="" class="our-amazing-work-images-item item-landing">
+            <img src="img/Layer%2029@1X.png" alt="" class="our-amazing-work-images-item item-landing">
+
+            <img src="img/Layer%2030@1X.png" alt="" class="our-amazing-work-images-item item-press">
+            <img src="img/Layer%2029@1X.png" alt="" class="our-amazing-work-images-item item-press">
 
         </div>
-        <div class="option-tabs-item ">
-            <p class="tab-text">Online Marketing</p>
+        <div class="our-amazing-work-images-column column-fourth">
+            <img src="img/Layer%207@1X.png" alt="" class="our-amazing-work-images-item item-all">
+            <img src="img/Layer%204@1X.png" alt="" class="our-amazing-work-images-item item-all">
+            <img src="img/Layer%2026@1X.png" alt="" class="our-amazing-work-images-item item-all">
 
-        </div>
-        <div class="option-tabs-item ">
-            <p class="tab-text">Seo Service</p>
+            <img src="img/Layer%204@1X.png" alt="" class="our-amazing-work-images-item item-graphic">
+            <img src="img/Layer%2026@1X.png" alt="" class="our-amazing-work-images-item item-graphic">
+
+            <img src="img/Layer%207@1X.png" alt="" class="our-amazing-work-images-item item-veb">
+            <img src="img/Layer%204@1X.png" alt="" class="our-amazing-work-images-item item-veb">
+
+            <img src="img/Layer%207@1X.png" alt="" class="our-amazing-work-images-item item-landing">
+            <img src="img/Layer%204@1X.png" alt="" class="our-amazing-work-images-item item-landing">
+
+            <img src="img/Layer%207@1X.png" alt="" class="our-amazing-work-images-item item-press">
+            <img src="img/Layer%204@1X.png" alt="" class="our-amazing-work-images-item item-press">
 
         </div>
     </div>
-    </div>
+
+        <div class="button-load-more">
+            <h1>+</h1>
+            <p class="button-load-more-text">LOAD MORE</p>
+        </div>
+
 </section>
 
 <section class="gallery-option">
@@ -218,9 +344,12 @@
     </div>
 
 </div>
-<!--<script src="js/jquery.js"></script>-->
-<!--<script src="js/slick.js"></script>-->
+
+
+<script src="js/jquery.js"></script>
+<script src="js/slick.js"></script>
 <script src="js/script.js"></script>
+<script src="js/script2.js"></script>
 
 </body>
 </html>
