--- a/stepProjectFirst/index.html
+++ b/stepProjectFirst/index.html
@@ -293,11 +293,20 @@
 
 
 
-<div  style="background: yellow" >
+<section class="person-information">
+    <div class="section-title container">
+        <p class="section-title-text" style="color:white">What People Say About theHam</p>
+        <div class="green-line "></div>
+        <div class="green-line green-line-second"></div>
+        <img src="img/Forma 1@1X (6).png" alt=""  class="quotation-img">
+    </div>
+
     <div class="slick-bigger container">
         <div>
             <div class="slick-bigger-items">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam et expedita fuga iure labore recusandae temporibus velit voluptas. Commodi eveniet fugit ipsum optio, perspiciatis quae repudiandae tempora unde veritatis? Cumque?</p>
+                <p>Lorem ipsum dolor sit amet, coniam et expedita fuga iure labore recusandae temporibus velit voluptas. Commodi eveniet fugit ipsum optio, perspiciatis quae repudiandae tempora unde veritatis? Cumque?</p>
+               <h2 class="green-text">HASAN ALI</h2>
+                <p class="person-profession">UX Designer</p>
                 <img src="img/Layer%204@1X.png" alt="slide-1 "class="slick-bigger-item-img" >
             </div>
         </div>
@@ -343,8 +352,10 @@
         <img src="https://via.placeholder.com/157x75/f32" alt="slide-8" class="slick-smaller-item">
     </div>
 
-</div>
-
+</section>
+<footer>
+    <p class="footer-text container">© Copyright 2015 <span class="green-text">theHam</span> | All Rights Reserved</p>
+</footer>
 
 <script src="js/jquery.js"></script>
 <script src="js/slick.js"></script>
