--- a/stepProjectFirst/index.html
+++ b/stepProjectFirst/index.html
@@ -30,7 +30,7 @@
                 <a href="#" class="header-top-nav-item">blog</a>
                 <a href="#" class="header-top-nav-item">team</a>
                 <a href="#" class="header-top-nav-item">contact</a>
-                <i class="fas fa-search"></i>
+                <i class="fas fa-search" id="first-search"></i>
             </nav>
         </div>
 
@@ -215,7 +215,7 @@
 
             <img src="img/Layer%2034@1X.png" alt="" class="our-amazing-work-images-item item-press">
             <img src="img/Layer%2033@1X.png" alt="" class="our-amazing-work-images-item item-press">
-
+            <div class="about-image"></div>
         </div>
         <div class="our-amazing-work-images-column column-second">
              <img src="img/Layer%2024@1X.png" alt="" class="our-amazing-work-images-item  item-all">
